<resources>
    <string name="app_name">alphaApp</string>
    <string name="app_user_center">奥飞用户中心</string>
    <string name="alpha_account">奥飞账号</string>
    <string name="agreement">协议文本</string>
    <string name="about_us_msg">\u3000\u3000这是一个关于我们的奥飞协议样式文本***********************************************************************</string>
    <string name="no_had_login">当前未登录,请先登录</string>
    <string name="pw">密码</string>
    <string name="save">保存</string>
    <string name="insure">确认</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="account">账号</string>
    <string name="phone">手机号</string>
    <string name="set_pw">设置密码</string>
    <string name="insure_pw">确认密码</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_verify">输入验证码</string>
    <string name="account_had">该用户名已存在，请更换</string>
    <string name="account_format">用户名格式须为小写字母开头，6-12位字符</string>
    <string name="input_valid_eleven_number">请输入11位有效的手机号</string>
    <string name="input_account">请输入用户名</string>
    <string name="pw_form">(6-12位字符)</string>
    <string name="verify_form_error">验证码格式错误</string>
    <string name="verify_input_error">验证码输入错误</string>
    <string name="pw_error_format">密码格式需为6-12位字符</string>
    <string name="twice_newpw_diffrent">两次输入的密码不同</string>
    <string name="account_alpha_format">(小写字母为开头,6-12位字符)</string>
    <string name="msg_verify">短信验证码</string>
    <string name="get_msg_verify">获取短信验证码</string>
    <string name="logining">努力登录中...</string>
    <string name="loading">努力加载中...</string>
    <string name="input_pw">输入密码</string>
    <string name="get_verify">获取验证码</string>
    <string name="account_register">账号注册</string>
    <string name="phone_register">手机号注册</string>
    <string name="register_way_choose">注册方式选择</string>
    <string name="already_has_account">已有账号</string>
    <string name="register_and_login">注册并登录</string>
    <string name="register_and_agree">注册即同意</string>
    <string name="alpha_rules">奥飞用户协议</string>
    <string name="input_alpha_account">输入奥飞账号</string>
    <string name="phone_had">该手机号已经注册</string>
    <string name="set_pw_register_success">设置密码,注册成功</string>
    <string name="register_one_account_can_user_for_all">注册一号通行奥飞旗下产品</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pw">忘记密码</string>
    <string name="normal_login">普通登录</string>
    <string name="quick_login">快速登录</string>
    <string name="user_auth_login">使用其他登录方式</string>
    <string name="alpha_account_or_phonenumber">奥飞账号\\\ 手机号</string>
    <string name="account_or_verify_error">手机号或者验证码格式不正确</string>
    <string name="account_or_pw_error">账号或者密码输入错误</string>
    <string name="mine">我的</string>
    <string name="home">首页</string>
    <string name="score_mall">积分商城</string>
    <string name="forum_setting">论坛设置</string>
    <string name="settings">设置</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="wel_comment">欢迎评分</string>
    <string name="exit_account">退出当前账号</string>
    <string name="settings_account_bind_set">账号和绑定设置</string>
    <string name="qq">QQ</string>
    <string name="edit">修改</string>
    <string name="bind">绑定</string>
    <string name="wechat">微信</string>
    <string name="now_set">立即设置</string>
    <string name="sec_set">安全设置</string>
    <string name="current_account">当前登录账号 :</string>
    <string name="old_pw_edit_pw">旧密码验证修改密码</string>
    <string name="has_bind_phone_edit_pw">绑定手机修改密码</string>
    <string name="by_password">密码修改及验证</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="old_pw_format_error">旧密码输入错误</string>
    <string name="next">下一步</string>
    <string name="success_bind_phone_number">绑定成功</string>
    <string name="phone_bind">手机号绑定</string>
    <string name="account_bind">账号绑定</string>
    <string name="bind_had_account">关联已有账号</string>
    <string name="insure_bind_">确定关联</string>
    <string name="this_account">该账号么?</string>
    <string name="bind_success">绑定成功</string>
    <string name="en_account_set">英文账号号设置</string>
    <string name="set_en_account_sucess">英文账号设置成功</string>
    <string name="submit_bind_phone">提交绑定手机</string>
    <string name="plz_input_new_bind_phone">请输入新绑定的手机号</string>
    <string name="phone_input_error">手机号输入错误</string>
    <string name="phone_had_bind">手机已经被绑定</string>
    <string name="no_bind">暂不关联,直接创建新账号</string>
    <string name="verify_get_too_much">获取验证码过于频繁</string>
    <string name="you_use_phone_login">可用绑定的手机号登录</string>
    <string name="you_use_phone_relogin">请用更改的手机号重新登录</string>
    <string name="you_use_wechat_phone_login">可用该手机号或者微信号登录</string>
    <string name="you_use_wechat_account_login">可用该账号或者微信号登录</string>
    <string name="you_use_account_login">可使用该英文账号进行登录</string>
    <string name="find_pw">找回密码</string>
    <string name="reset_pw">重设密码</string>
    <string name="verify_msg">验证身份</string>
    <string name="we_already">我们已经向</string>
    <string name="insure_account">确认账号</string>
    <string name="now_login_set">立即登录设置</string>
    <string name="pw_isnot_empty">密码不能为空</string>
    <string name="pw_reset_success">密码重置成功</string>
    <string name="get_phone_verify">获取手机验证码</string>
    <string name="by_bind_wx_get">通过绑定的微信找回</string>
    <string name="plz_use_new_login_now">请用新密码登录</string>
    <string name="look_wx_bind_account">查看绑定的英文账号</string>
    <string name="by_bind_phone_get">通过绑定的手机号找回</string>
    <string name="wx_has_login_alpha">该微信号已注册为奥飞用户</string>
    <string name="plz_next_login_use_new_pw">请下次登录时使用新密码</string>
    <string name="your_alpha_account_format">您的奥飞英文账号为:</string>
    <string name="send_phone_verify_plz_look">下发了手机验证码,请及时查收并输入</string>
    <string name="account_or_phone_intput_error">账号或手机号输入错误或未绑定</string>
    <string name="if_reset_pw_for_the_account">如确认为该账号重设密码,请点击下方按钮</string>
    <string name="wx_no_login_alpha">该微信号未注册奥飞账号，如需找回，请点击下方的"立即登录设置"按钮。</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="done">完成</string>
    <string name="school">学校</string>
    <string name="street">街道</string>
    <string name="avatar">头像</string>
    <string name="my_qq">我的QQ</string>
    <string name="secrect">保密</string>
    <string name="nickname">昵称</string>
    <string name="no_sign">您今天还未签到</string>
    <string name="my_info">我的资料</string>
    <string name="user_msg">个人信息</string>
    <string name="birthday">出生日期</string>
    <string name="now_school">就读学校</string>
    <string name="phone_contact">联系电话</string>
    <string name="contact_addr">联系地址</string>
    <string name="input_school">请输入学校名称</string>
    <string name="province_city_area">省、市、区</string>
    <string name="pca_must_not_be_empty">省市县不能为空</string>
    <string name="plz_input_detail_addr">请填写详细地址</string>
    <string name="qq_format">"QQ格式1-20纯数字"</string>
    <string name="nickname_format">昵称格式4-12字符，支持中文</string>
    <string name="truename_format">姓名格式1-12字符，支持中文</string>
    <string name="contact_phone_format">联系电话格式1-20位字符</string>
    <string name="reply">回复</string>
    <string name="like">喜欢</string>
    <string name="notice">提醒</string>
    <string name="fans">粉丝</string>
    <string name="attention">关注</string>
    <string name="attention_topic">关注话题</string>
    <string name="look_history">浏览历史</string>
    <string name="find">发现</string>
    <string name="hot_topic">热门话题</string>
    <string name="everyone_like">大家喜欢</string>
    <string name="launch_wx">拉起微信授权</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="net_error_text">网络异常</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="wechat_not_installed">未安装微信</string>
    <string name="start_checkout_new_version">开始检测新版本</string>
    <string name="advise">意见建议</string>
    <string name="fuction_bug">功能BUG</string>
    <string name="plz_input_txt">请在此处输入文本</string>
    <string name="num_1_5"> 1/5</string>
    <string name="user_agreement_alpha">用户协议-奥飞</string>
    <string name="agree_hint"> 协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议协议</string>
    <string name="now_right_update">立即更新</string>
    <string name="talk_to_you_later">以后再说</string>
    <string name="find_new_version">发现新版本</string>
    <string name="version_size">新版本大小：19.07M</string>
    <string name="new_version_name">最新版本：奥飞用户中心v2.2.1</string>
    <string name="update_message">\n更新内容：\n1、处理了海图上长按定点查询附近通航要素和船舶的bug\n2、新增点击消息列表查看消息类容\n3、调整经纬度变化距离获取消息通知，以及优化消息列表的显示样式\n4、海图切换窗口里面新增 显示当前屏幕范围内的AIS数据\n</string>
    <string name="tranform_car">爆裂飞车2</string>
    <string name="super_waving">超级飞侠</string>
    <string name="zero_speed">零速争霸</string>
    <string name="recommend">推荐</string>
    <string name="score">积分</string>
    <string name="hot_degree">热度</string>
    <string name="score_strategy">积分攻略</string>
    <string name="score_record">积分记录</string>
    <string name="scrore_1999999">1999999</string>
    <string name="scrore_10000">10000</string>
    <string name="has_exchange_10000">已兑换:1000份</string>
    <string name="store_10000">库存:1000份</string>
    <string name="gift_name_abc">礼品名称ABC</string>
    <string name="has_exhange_">已兑换:</string>
    <string name="remain_">库存:</string>
    <string name="part">份</string>
    <string name="score_">积分 :</string>
    <string name="super_coin_">乐币 :</string>
    <string name="my_score">我的积分</string>
    <string name="exchange_record">兑换记录</string>
    <string name="change_record">积分变动记录</string>
    <string name="shipping_addr">收获地址</string>
    <string name="do_active_code">激活激活码</string>
    <string name="order_detail">订单详情</string>
    <string name="type_">类型 :</string>
    <string name="nothing">无</string>
    <string name="channel_">渠道 :</string>
    <string name="status_"> 状态 :</string>
    <string name="order_close">已关闭</string>
    <string name="my_score_">我的积分 :</string>
    <string name="change_time_">变动时间 :</string>
    <string name="order_code_"> 订单编号 : </string>
    <string name="need_score_">所需积分 :</string>
    <string name="warm_prompt_">温馨提示:</string>
    <string name="change_score_">变动积分 :</string>
    <string name="virtual_gooods">虚拟物品</string>
    <string name="product_name_">商品名称 :</string>
    <string name="product_type_">商品类型 :</string>
    <string name="exchange_count_">兑换数量 :</string>
    <string name="exchange_declare_">兑换说明:</string>
    <string name="expense_score_"> 消费积分 : </string>
    <string name="actual_googs">虚拟物品</string>
    <string name="ready_send_goods">待发货</string>
    <string name="had_been_shipping">已发货</string>
    <string name="have_the_goods">已收获</string>
    <string name="actual_goods">实际物品</string>
    <string name="virtual_goods">虚拟物品</string>
    <string name="no_have_goods_list">当前没有商品信息</string>
    <string name="empty_order_data_hint">当前没有订单信息!</string>
    <string name="no_have_shiping_addr">当前没有收获地址,请添加收货</string>
    <string name="insure_exchange_this_goods">确认兑换该商品么?</string>
    <string name="express_is_arrival_pay">快递都以到付的形式寄送,请知悉!</string>
    <string name="change_before_score_">变动前积分 :</string>
    <string name="change_behind_score_">变动后积分 :</string>
    <string name="empty_change_data_hint">当前没有积分变动信息!</string>
    <string name="now_exchange">立即兑换</string>
    <string name="delete">删除</string>
    <string name="compile">编辑</string>
    <string name="exchange">兑换</string>
    <string name="post_code">邮编</string>
    <string name="area">所在区域</string>
    <string name="insure_order">确认订单</string>
    <string name="plz_choose">请选择</string>
    <string name="insure_del_addr">确定删除该收货地址么?</string>
    <string name="info_had_modify_if_return"> "信息修改了还未保存,确认现在返回吗?"</string>
</resources>