<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.alpha.alphaapp.ui.widget.TitleLayout
        android:id="@+id/wx_getpw_has_account_titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:txt_title="@string/find_pw" />

    <com.alpha.alphaapp.ui.widget.OneTwoThreeItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:curent_select="2"

        app:txt_first="@string/verify_msg"
        app:txt_second="@string/insure_account"
        app:txt_third="@string/reset_pw" />

    <TextView
        android:id="@+id/wx_getpw_has_account_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:maxLines="2"

        android:text="@string/wx_has_login_alpha"
        android:textColor="@color/tv_black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/if_reset_pw_for_the_account"
        android:textColor="@color/tv_black" />

    <Button
        android:id="@+id/wx_getpw_has_account_btn_reset"
        style="@style/btn_com_blue"
        android:text="@string/reset_pw" />
</LinearLayout>