<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/fragment_score_mall_btn_my_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_score" />

    <Button
        android:id="@+id/fragment_score_mall_btn_for_exhange_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchange_record" />

    <Button
        android:id="@+id/fragment_score_mall_btn_change_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_record" />

    <Button
        android:id="@+id/fragment_score_mall_btn_shiping_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shipping_addr" />

    <Button
        android:id="@+id/fragment_score_mall_btn_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_active_code" />


</LinearLayout>