<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.alpha.alphaapp.ui.widget.TitleLayout
        android:id="@+id/change_phone_bind_2_titlelayout"
        android:layout_width="match_parent"
        app:txt_title="@string/phone_bind"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.OneTwoThreeItemView
        android:id="@+id/change_phone_bind_2_ott"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:curent_select="2"
        app:txt_first="@string/verify_msg"
        app:txt_second="@string/submit_bind_phone"
        app:txt_third="@string/success_bind_phone_number" />

    <com.alpha.alphaapp.ui.widget.et.AccountEditText
        android:id="@+id/change_phone_bind_2_aet_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/plz_input_new_bind_phone"
        app:icon_type="@drawable/icon_phone_jpg" />

    <com.alpha.alphaapp.ui.widget.et.InputVerifyEditText
        android:id="@+id/change_phone_bind_2_ivet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commom_margin_5" />

    <com.alpha.alphaapp.ui.widget.tx.ErrorTextView
        android:id="@+id/change_phone_bind_2_tv_error"
        style="@style/tv_error_com" />

    <Button
        android:id="@+id/change_phone_bind_2_btn_bind"
        style="@style/btn_one_com_gray"
        android:text="@string/bind" />
</LinearLayout>