<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.alpha.alphaapp.ui.widget.TitleLayout
        android:id="@+id/phone_get_pw_1_titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.OneTwoThreeItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:curent_select="1"
        app:icon_first="@drawable/one"
        app:icon_second="@drawable/two"
        app:icon_third="@drawable/three"
        app:txt_first="@string/verify_msg"
        app:txt_second="@string/input_verify"
        app:txt_third="@string/reset_pw" />

    <com.alpha.alphaapp.ui.widget.et.AccountEditText
        android:id="@+id/phone_get_pw_1_aet_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/phone_number"
        app:icon_type="@drawable/icon_phone" />

    <TextView
        android:id="@+id/phone_get_pw_1_tv_error"
        style="@style/tv_error_com" />

    <Button
        android:id="@+id/phone_get_pw_1_btn_getVerify"
        style="@style/btn_com_gray"
        android:text="@string/get_phone_verify" />
</LinearLayout>