<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.alpha.alphaapp.ui.widget.TitleLayout
        android:id="@+id/mine_info_titlelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:txt_title="@string/my_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/commom_margin_10"
        android:background="@color/common_bg_light_gray" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyIconView
        android:id="@+id/mine_info_miv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoETItemView
        android:id="@+id/mine_info_mieiv_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:mieiv_txt_left="@string/nickname" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoETItemView
        android:id="@+id/mine_info_mieiv_truename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:mieiv_txt_left="@string/name" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifySexView
        android:id="@+id/mine_info_msv_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:msv_txt_left="@string/sex" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoItemView
        android:id="@+id/mine_info_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:txt_item="@string/birthday" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/commom_margin_10"
        android:background="@color/common_bg_light_gray" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoItemView
        android:id="@+id/mine_info_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:txt_item="@string/school" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoETItemView
        android:id="@+id/mine_info_mieiv_qq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:mieiv_txt_left="@string/my_qq" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoETItemView
        android:id="@+id/mine_info_mieiv_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:mieiv_txt_left="@string/phone_contact" />

    <com.alpha.alphaapp.ui.widget.LineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.alpha.alphaapp.ui.widget.mine.ModifyInfoItemView
        android:id="@+id/mine_info_contact_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:txt_item="@string/contact_addr" />
</LinearLayout>